# finfm

./: .env.example  README.md  data_prep.py  docker-compose.yml  pyproject.toml  requirements.txt
configs/: backtest.yaml  data.yaml  infer.yaml  train.yaml
docker/: Dockerfile
mlflow/: docker-compose.yml  mlflow.db
scripts/: docker_build.sh  run_train.sh
src/: cli.py
src/backtest/: cli.py  engine.py  loader.py  metrics.py  report.py  strategy.py
src/data/: __init__.py  calendar.py  dataset.py  fetcher.py  preprocess.py  scalers.py  split.py  window.py
src/model/: reward.py  timesfm_wrapper.py
src/serving/: app.py  batch.py  predictor.py
src/train/: eval.py  ppo_trainer.py  reward.py  run_train.py
tests/: test_backtest.py  test_predictor.py
v1/: requirements.txt  timesfm_rl_prototype.ipynb  timesfm_rl_prototype.py
v1/data/: prices.csv
v1/logs/: 0.monitor.csv
v1/ppo_tb/PPO_1/: events.out.tfevents.1751509722.43681f1d3251.133067.0
v1/ppo_tb/PPO_2/: events.out.tfevents.1751510147.43681f1d3251.133067.1
v1/ppo_tb/PPO_3/: events.out.tfevents.1751510541.43681f1d3251.133067.2
v1/ppo_tb/PPO_4/: events.out.tfevents.1751510716.43681f1d3251.133067.3
v1/ppo_tb/PPO_5/: events.out.tfevents.1751511538.43681f1d3251.133067.4
v2/: rl_portfolio_reward_clipping.ipynb  rl_portfolio_reward_clipping.py
v3/: reward_clip_portfolio_rl.py
v4/: reward_clip_portfolio_rl_v2.py
v5/: backtest_policy.py  backtest_sb3.py   reward_clip_portfolio_sb3.py
v5/exports/ppo_saved_3/: policy.onnx  policy_traced.pt
v6/: reward_clip_portfolio_sb3_timesfm.py
(+18 files in other folders)
